# meph

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE
include/meph/core/: scheduler.hpp  types.hpp
include/meph/core/ecs/: ComponentPool.hpp  Registry.hpp
include/meph/core/scheduler/: Scheduler.hpp
include/meph/meta/: meta.hpp
include/meph/utils/: result.hpp
src/core/: scheduler.cpp
test/: test_core.cpp
test/core/: test_scheduler.cpp
test/core/ecs/: static_test_Registry.cpp  test_ComponentPool.cpp  test_Registry.cpp
test/core/scheduler/: test_Scheduler.cpp
test/utils/: test_Result.cpp
